src/objects/ACCL__Job_Definition_List_Account_Set__c.object
<CustomObject>
    <description>Junction object between Job Definition List and Customer Set.</description>
    <fields>
        <fullName>ACCL__Account_Set_Description__c</fullName>
        <formula>ACCL__Account_Set__r.ACCL__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Set Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Account_Set_Name__c</fullName>
        <formula>ACCL__Account_Set__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Set Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Account_Set__c</fullName>
        <label>Customer Set</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.ACCL__Sales_Org__c</field>
                <operation>equals</operation>
                <valueField>ACCL__Account_Set__c.ACCL__Sales_Org__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Account_Set__c</referenceTo>
        <relationshipLabel>Job Definition List Customer Sets</relationshipLabel>
        <relationshipName>Job_Definition_List_Account_Sets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Composite_Key__c</fullName>
        <description>Contains concationation of the related records Job definition List and Customer Set. The field is set by workflow. This helps to avoid that a Customer Set can be added twice to a Job Definition List.</description>
        <label>Composite Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Job_Definition_List__c</fullName>
        <label>Activity</label>
        <referenceTo>ACCL__Job_Definition_List__c</referenceTo>
        <relationshipLabel>Activity Customer Sets</relationshipLabel>
        <relationshipName>Job_Definition_List_Account_Sets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, /*IMAGE(&quot;/img/func_icons/util/lookup20.gif&quot;, &quot;View&quot;)*/&quot;View&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes sales organization which the account set assignment of the activity (and the activity itself) belongs to.</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <label>Activity Customer Set</label>
    <nameField>
        <displayFormat>JDLCS-{0000}</displayFormat>
        <label>Activity Customer Set Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Customer Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Account_Set_Is_Not_Allowed</fullName>
        <active>true</active>
        <description>Customer Set cannot be added if the Consider Customer on Activity Template is unchecked.</description>
        <errorConditionFormula>ACCL__Job_Definition_List__r.ACCL__Job_Definition_List_Template__r.ACCL__Consider_Account__c = false</errorConditionFormula>
        <errorMessage>Customer Set can&apos;t be added if the Consider Customer on Activity Template is unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same_for_all_lookups</fullName>
        <active>true</active>
        <description>The Activity Customer Set, Activity and Customer Set must have the same Sales Org.</description>
        <errorConditionFormula>OR (TEXT( ACCL__Account_Set__r.ACCL__Sales_Org__c ) &lt;&gt;  TEXT( ACCL__Job_Definition_List__r.ACCL__Sales_Org__c ),
TEXT( ACCL__Sales_Org__c ) &lt;&gt; TEXT( ACCL__Account_Set__r.ACCL__Sales_Org__c ))</errorConditionFormula>
        <errorMessage>The Activity Customer Set, Activity and Customer Set must have the same Sales Org.</errorMessage>
    </validationRules>
</CustomObject>